adding in core plugins - https://github.com/osTicket/core-plugins

--- a/php.ini
+++ b/php.ini
@@ -5,7 +5,8 @@ asp_tags = Off
 precision = 14
 output_buffering = Off
 output_handler = 
-zlib.output_compression = Off
+zlib.output_compression = On
+zlib.output_compression_level = 6
 implicit_flush = Off
 allow_call_time_pass_reference = Off
 unserialize_callback_func =
