--- a/httpd.conf
+++ b/httpd.conf
@@ -149,6 +149,7 @@ LoadModule dir_module modules/mod_dir.so
 #LoadModule userdir_module modules/mod_userdir.so
 LoadModule alias_module modules/mod_alias.so
 LoadModule rewrite_module modules/mod_rewrite.so
+#LoadModule php7_module        modules/libphp7.so
 LoadModule php5_module modules/libphp5.so
 
 
@@ -225,7 +226,6 @@ DocumentRoot "/usr/local/apache2/htdocs"
 <FilesMatch \.php$>
     SetHandler application/x-httpd-php
 </FilesMatch>
-
 
 
 #
